# minigecko

./: .gitignore  CONTRIBUTING.md  README.md  TASKS.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
docs/: minipro.1  truth-table-format.md  user-manual.md
minigecko/: __init__.py  __main__.py  app.py
minigecko/core/: __init__.py  device_db.py  emulator.py  logicdb.py  minipro.py
minigecko/data/: device_descriptions.txt  user-manual.md
minigecko/data/help/: 01-overview.md  02-1-about-this-manual.md  03-2-what-minigecko-is.md  04-3-installation-and-setup.md  05-4-starting-minigecko.md  06-5-interface-tour.md  07-6-keyboard-shortcuts.md  08-7-chip-selection.md  09-8-file-operations.md  10-9-device-operations.md  11-10-safety-and-best-practices.md  12-11-configuration-and-persistence.md  13-12-troubleshooting.md  14-13-glossary.md  15-14-quick-reference.md  16-15-revision-history.md  17-appendix-a-fill-progress-checklist.md  toc.md
minigecko/ui/: __init__.py  app_shell.py  hexdump.py  state.py  toolbar.py
minigecko/ui/modals/: __init__.py  chip_select.py  confirmations.py  file_picker.py  help_screen.py  ic_ops.py
minigecko/ui/panels/: __init__.py  action_log_panel.py  hex_panel.py  ic_info_panel.py
minigecko/ui/widgets/: __init__.py  hex_dump_view.py  hexview.py  resize_handles.py
tests/: test_core.py
